# schism

./: .gitignore  CMakeLists.txt  README.md  example_sequencer_synth.schism
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  SelfTestMain.cpp
Source/DSP/: RuntimeEngine.cpp  RuntimeEngine.h
Source/IR/: GraphIR.cpp  GraphIR.h
Source/Patch/: PatchFile.cpp  PatchFile.h
Source/Sync/: SyncMap.cpp  SyncMap.h
Source/Text/: GraphLanguage.cpp  GraphLanguage.h
Source/UI/: ProbeWidgets.cpp  ProbeWidgets.h
Source/Visual/: GraphCanvas.cpp  GraphCanvas.h
